<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_color"
    android:orientation="horizontal"
    android:showDividers="middle" 
    xmlns:tools="http://schemas.android.com/tools" >

    <ImageView
        android:id="@+id/ivVignetteFlux"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:contentDescription="@string/vignette_du_flux"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/tvTitreEpisode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_vertical|left"
            android:inputType="none"
            android:singleLine="true"
            android:text="@string/titre_episode" />

        <TextView
            android:id="@+id/tvDateEpisode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|left"
            android:inputType="none"
            android:text="@string/date_au_format_jj_mmm" 
            	>            
        </TextView>

        <TextView
            android:id="@+id/tvMessageTelechargement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_telechargement_progression" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/ibTelechargement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:background="@color/app_color"
        android:src="@drawable/telechargement"
        android:contentDescription="@string/vignette_telechargement" />

</LinearLayout>
